feat: implement backoffice endpoints and enhance location management. Added backoffice REST resources, enhanced location management with CSV import/export, updated API Gateway with fallback routes, improved JWT security, and refactored admin-portal location features.
Co-authored-by: Junie <junie@jetbrains.com>